--- a/About/styles.css
+++ b/About/styles.css
@@ -3,6 +3,12 @@
     margin: 0;
 }
 
+body {
+   text-align: center;
+   
+    
+}
+
 .containter {
     display: flex;
     flex-direction: column;
@@ -14,9 +20,12 @@
 }
 
 .carousel-container {
-    width: 70%;
+    height: auto;
+    width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    align-content: center;
+    margin-top: 100px;
 }
 
 .carousel-images img {
@@ -32,16 +41,35 @@
 
 
 .carousel-button {
+    background-color:darkslategrey;
     align-self: center;
-    color: whitesmoke;
     padding: 10px;
     border-radius: 50%;
     text-align: center;
-    box-shadow: 1px 1px darkgreen;
+    box-shadow: 1px 1px rgb(9, 9, 9);
 }
 
 .carousel-button:hover {
     cursor: pointer;
-    background: black;
+    background: white;
 
+}
+
+footer {
+    margin-top: 260px;
+    justify-content: center;
+    align-content: center;
+}
+/* footer>h3 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+} */
+
+h1 {
+    margin-top: 40px;
+}
+
+p {
+    margin-top: 10px;
 }
