--- a/main.css
+++ b/main.css
@@ -3,32 +3,98 @@
     box-sizing: border-box;
 }
 
+@media (max-width: 768px) {
+    
+  }
+  
+
+@media (min-width: 769px) {
+    
+  }
+  
+
 html {
-    background-color: grey;
+    background-color: lightgrey;
 }
 
 body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: 200;
+    
 }
 
 main {
     flex-grow: 1;
     text-align: center;
+    flex-direction: column;
+    align-items:center;
 }
 
-nav {
+.nav_container {
     border-bottom: 2px solid black;
+    text-align: center;
+    justify-content: space-evenly;
+    display: flex;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
+
+a {
+    text-decoration: none;
+    color: darkslategrey;
+    font-weight: bold;
+}
+/* .item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 100px;
+} */
 
 footer {
     border-top: 2px solid black;
-    
+    display: flex;
+    justify-content: center;
+    font-size: 40px;
+}
+
+footer a {
+    color: darkslategrey;
 }
 
 .pic {
-    height: 400px;
-    width: 400px;
-   
+    height: 250px;
+    width: 250px;
+    border-radius: 50%;
+    margin-top: 40px;
 }
+
+button {
+    background-color: lightslategrey;
+}
+
+h1 {
+    margin-top: 50px;
+}
+
+h2 {
+    margin-top: 50px;
+}
+
+@keyframes fade {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.fade-in {
+    animation: fade 1.5s ease-in;
+}
+
