--- a/Projects/styles.css
+++ b/Projects/styles.css
@@ -17,12 +17,15 @@ main {
 }
 
 nav {
+    display: flex;
     border-bottom: 2px solid black;
+    
 }
 
 footer {
-    border-top: 2px solid black;
+    display: flex;
     
+    border-top: 2px solid black;
 }
 
 h1 {
