--- a/Projects/styles.css
+++ b/Projects/styles.css
@@ -22,6 +22,25 @@ nav {
     
 }
 
+.project-card {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid black;
+    border-radius: 8px;
+    padding: 1px;
+    margin: 20px;
+}
+
+.project-card img {
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 10px;
+}
+
+.project-card h3 {
+    font-size: 1.5rem;
+}
+
 footer {
     display: flex;
     
